--- a/CSS/home.css
+++ b/CSS/home.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+@keyframes glow {
+    to {
+        opacity: 0;
+    }
+}
+
 p, label, a, h1 {
     font-family: 'VT323', monospace;
     color: #89BFE2;
